parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLE_QUOTE
    FUNCTION_DEFINITION
    PERIOD
    QUOTE

Grammar

Rule 0     S' -> main_func
Rule 1     main_func -> MAIN_FUNCTION EXECUTE COLON statement_list FUNCTION_END
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> statement
Rule 4     statement -> expression
Rule 5     statement -> variable_declaration
Rule 6     statement -> variable_assignment
Rule 7     statement -> array_declaration
Rule 8     statement -> array_index_access
Rule 9     statement -> while_statement
Rule 10    statement -> for_statement
Rule 11    statement -> if_statement
Rule 12    statement -> print_statement
Rule 13    statement -> return_statement
Rule 14    statement -> empty
Rule 15    if_statement -> IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_IF
Rule 16    if_statement -> IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list OTHERWISE COLON statement_list END_IF
Rule 17    if_statement -> IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list OTHERWISE IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_IF
Rule 18    for_statement -> FOR variable_declaration WITH LIMIT INTEGER_VALUE ASCEND INTEGER_VALUE EXECUTE COLON statement_list END_FOR
Rule 19    for_statement -> FOR variable_declaration WITH LIMIT INTEGER_VALUE DESCEND INTEGER_VALUE EXECUTE COLON statement_list END_FOR
Rule 20    print_statement -> PRINT LPAREN print_list RPAREN SEMICOLON
Rule 21    print_list -> expression
Rule 22    print_list -> STRING_VALUE
Rule 23    print_list -> expression COMMA print_list
Rule 24    print_list -> STRING_VALUE COMMA expression
Rule 25    print_list -> STRING_VALUE COMMA print_list
Rule 26    print_list -> STRING_VALUE COMMA expression COMMA print_list
Rule 27    while_statement -> WHILE LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_WHILE
Rule 28    return_statement -> RETURN statement SEMICOLON
Rule 29    variable_declaration -> datatype IDENTIFIER SEMICOLON
Rule 30    variable_declaration -> datatype IDENTIFIER ASSIGNMENT expression SEMICOLON
Rule 31    variable_assignment -> IDENTIFIER ASSIGNMENT expression SEMICOLON
Rule 32    variable_assignment -> array_index_access ASSIGNMENT expression SEMICOLON
Rule 33    array_declaration -> datatype IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET SEMICOLON
Rule 34    array_declaration -> datatype IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET ASSIGNMENT LBRACKET array_value_list RBRACKET SEMICOLON
Rule 35    array_value_list -> datavalue COMMA array_value_list
Rule 36    array_value_list -> datavalue
Rule 37    array_index_access -> IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET
Rule 38    array_index_access -> IDENTIFIER LBRACKET IDENTIFIER RBRACKET
Rule 39    expression -> condition_expression
Rule 40    expression -> expression ADDITION expression
Rule 41    expression -> expression SUBTRACTION expression
Rule 42    expression -> expression MULTIPLICATION expression
Rule 43    expression -> expression DIVISION expression
Rule 44    expression -> expression EXPONENTIAL expression
Rule 45    expression -> expression MODULUS expression
Rule 46    expression -> datavalue INCREMENT
Rule 47    expression -> datavalue DECREMENT
Rule 48    expression -> datavalue
Rule 49    expression -> array_index_access
Rule 50    condition_expression -> condition_expression AND condition_expression
Rule 51    condition_expression -> condition_expression OR condition_expression
Rule 52    condition_expression -> NOT expression
Rule 53    condition_expression -> expression EQ expression
Rule 54    condition_expression -> expression LT expression
Rule 55    condition_expression -> expression GT expression
Rule 56    condition_expression -> expression LE expression
Rule 57    condition_expression -> expression GE expression
Rule 58    condition_expression -> expression NE expression
Rule 59    datatype -> FLOAT
Rule 60    datatype -> INTEGER
Rule 61    datatype -> STRING
Rule 62    datatype -> BOOLEAN
Rule 63    datavalue -> FLOAT_VALUE
Rule 64    datavalue -> INTEGER_VALUE
Rule 65    datavalue -> STRING_VALUE
Rule 66    datavalue -> NULL_VALUE
Rule 67    datavalue -> IDENTIFIER
Rule 68    datavalue -> TRUE
Rule 69    datavalue -> FALSE
Rule 70    datavalue -> array_index_access
Rule 71    empty -> <empty>

Terminals, with rules where they appear

ADDITION             : 40
AND                  : 50
ASCEND               : 18
ASSIGNMENT           : 30 31 32 34
BOOLEAN              : 62
COLON                : 1 15 16 16 17 17 18 19 27
COMMA                : 23 24 25 26 26 35
DECREMENT            : 47
DESCEND              : 19
DIVISION             : 43
DOUBLE_QUOTE         : 
END_FOR              : 18 19
END_IF               : 15 16 17
END_WHILE            : 27
EQ                   : 53
EXECUTE              : 1 15 16 17 17 18 19 27
EXPONENTIAL          : 44
FALSE                : 69
FLOAT                : 59
FLOAT_VALUE          : 63
FOR                  : 18 19
FUNCTION_DEFINITION  : 
FUNCTION_END         : 1
GE                   : 57
GT                   : 55
IDENTIFIER           : 29 30 31 33 34 37 38 38 67
IF                   : 15 16 17 17
INCREMENT            : 46
INTEGER              : 60
INTEGER_VALUE        : 18 18 19 19 33 34 37 64
LBRACKET             : 33 34 34 37 38
LE                   : 56
LIMIT                : 18 19
LPAREN               : 15 16 17 17 20 27
LT                   : 54
MAIN_FUNCTION        : 1
MODULUS              : 45
MULTIPLICATION       : 42
NE                   : 58
NOT                  : 52
NULL_VALUE           : 66
OR                   : 51
OTHERWISE            : 16 17
PERIOD               : 
PRINT                : 20
QUOTE                : 
RBRACKET             : 33 34 34 37 38
RETURN               : 28
RPAREN               : 15 16 17 17 20 27
SEMICOLON            : 20 28 29 30 31 32 33 34
STRING               : 61
STRING_VALUE         : 22 24 25 26 65
SUBTRACTION          : 41
TRUE                 : 68
WHILE                : 27
WITH                 : 18 19
error                : 

Nonterminals, with rules where they appear

array_declaration    : 7
array_index_access   : 8 32 49 70
array_value_list     : 34 35
condition_expression : 15 16 17 17 27 39 50 50 51 51
datatype             : 29 30 33 34
datavalue            : 35 36 46 47 48
empty                : 14
expression           : 4 21 23 24 26 30 31 32 40 40 41 41 42 42 43 43 44 44 45 45 52 53 53 54 54 55 55 56 56 57 57 58 58
for_statement        : 10
if_statement         : 11
main_func            : 0
print_list           : 20 23 25 26
print_statement      : 12
return_statement     : 13
statement            : 2 3 28
statement_list       : 1 2 15 16 16 17 17 18 19 27
variable_assignment  : 6
variable_declaration : 5 18 19
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . main_func
    (1) main_func -> . MAIN_FUNCTION EXECUTE COLON statement_list FUNCTION_END

    MAIN_FUNCTION   shift and go to state 2

    main_func                      shift and go to state 1

state 1

    (0) S' -> main_func .



state 2

    (1) main_func -> MAIN_FUNCTION . EXECUTE COLON statement_list FUNCTION_END

    EXECUTE         shift and go to state 3


state 3

    (1) main_func -> MAIN_FUNCTION EXECUTE . COLON statement_list FUNCTION_END

    COLON           shift and go to state 4


state 4

    (1) main_func -> MAIN_FUNCTION EXECUTE COLON . statement_list FUNCTION_END
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . expression
    (5) statement -> . variable_declaration
    (6) statement -> . variable_assignment
    (7) statement -> . array_declaration
    (8) statement -> . array_index_access
    (9) statement -> . while_statement
    (10) statement -> . for_statement
    (11) statement -> . if_statement
    (12) statement -> . print_statement
    (13) statement -> . return_statement
    (14) statement -> . empty
    (39) expression -> . condition_expression
    (40) expression -> . expression ADDITION expression
    (41) expression -> . expression SUBTRACTION expression
    (42) expression -> . expression MULTIPLICATION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression EXPONENTIAL expression
    (45) expression -> . expression MODULUS expression
    (46) expression -> . datavalue INCREMENT
    (47) expression -> . datavalue DECREMENT
    (48) expression -> . datavalue
    (49) expression -> . array_index_access
    (29) variable_declaration -> . datatype IDENTIFIER SEMICOLON
    (30) variable_declaration -> . datatype IDENTIFIER ASSIGNMENT expression SEMICOLON
    (31) variable_assignment -> . IDENTIFIER ASSIGNMENT expression SEMICOLON
    (32) variable_assignment -> . array_index_access ASSIGNMENT expression SEMICOLON
    (33) array_declaration -> . datatype IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET SEMICOLON
    (34) array_declaration -> . datatype IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET ASSIGNMENT LBRACKET array_value_list RBRACKET SEMICOLON
    (37) array_index_access -> . IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET
    (38) array_index_access -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (27) while_statement -> . WHILE LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_WHILE
    (18) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE ASCEND INTEGER_VALUE EXECUTE COLON statement_list END_FOR
    (19) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE DESCEND INTEGER_VALUE EXECUTE COLON statement_list END_FOR
    (15) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_IF
    (16) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list OTHERWISE COLON statement_list END_IF
    (17) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list OTHERWISE IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_IF
    (20) print_statement -> . PRINT LPAREN print_list RPAREN SEMICOLON
    (28) return_statement -> . RETURN statement SEMICOLON
    (71) empty -> .
    (50) condition_expression -> . condition_expression AND condition_expression
    (51) condition_expression -> . condition_expression OR condition_expression
    (52) condition_expression -> . NOT expression
    (53) condition_expression -> . expression EQ expression
    (54) condition_expression -> . expression LT expression
    (55) condition_expression -> . expression GT expression
    (56) condition_expression -> . expression LE expression
    (57) condition_expression -> . expression GE expression
    (58) condition_expression -> . expression NE expression
    (63) datavalue -> . FLOAT_VALUE
    (64) datavalue -> . INTEGER_VALUE
    (65) datavalue -> . STRING_VALUE
    (66) datavalue -> . NULL_VALUE
    (67) datavalue -> . IDENTIFIER
    (68) datavalue -> . TRUE
    (69) datavalue -> . FALSE
    (70) datavalue -> . array_index_access
    (59) datatype -> . FLOAT
    (60) datatype -> . INTEGER
    (61) datatype -> . STRING
    (62) datatype -> . BOOLEAN

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for FLOAT_VALUE resolved as shift
  ! shift/reduce conflict for INTEGER_VALUE resolved as shift
  ! shift/reduce conflict for STRING_VALUE resolved as shift
  ! shift/reduce conflict for NULL_VALUE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    IDENTIFIER      shift and go to state 21
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 25
    PRINT           shift and go to state 26
    RETURN          shift and go to state 27
    FUNCTION_END    reduce using rule 71 (empty -> .)
    NOT             shift and go to state 28
    FLOAT_VALUE     shift and go to state 29
    INTEGER_VALUE   shift and go to state 22
    STRING_VALUE    shift and go to state 30
    NULL_VALUE      shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    FLOAT           shift and go to state 34
    INTEGER         shift and go to state 35
    STRING          shift and go to state 36
    BOOLEAN         shift and go to state 37

  ! IDENTIFIER      [ reduce using rule 71 (empty -> .) ]
  ! WHILE           [ reduce using rule 71 (empty -> .) ]
  ! FOR             [ reduce using rule 71 (empty -> .) ]
  ! IF              [ reduce using rule 71 (empty -> .) ]
  ! PRINT           [ reduce using rule 71 (empty -> .) ]
  ! RETURN          [ reduce using rule 71 (empty -> .) ]
  ! NOT             [ reduce using rule 71 (empty -> .) ]
  ! FLOAT_VALUE     [ reduce using rule 71 (empty -> .) ]
  ! INTEGER_VALUE   [ reduce using rule 71 (empty -> .) ]
  ! STRING_VALUE    [ reduce using rule 71 (empty -> .) ]
  ! NULL_VALUE      [ reduce using rule 71 (empty -> .) ]
  ! TRUE            [ reduce using rule 71 (empty -> .) ]
  ! FALSE           [ reduce using rule 71 (empty -> .) ]
  ! FLOAT           [ reduce using rule 71 (empty -> .) ]
  ! INTEGER         [ reduce using rule 71 (empty -> .) ]
  ! STRING          [ reduce using rule 71 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 71 (empty -> .) ]

    statement_list                 shift and go to state 5
    statement                      shift and go to state 6
    expression                     shift and go to state 7
    variable_declaration           shift and go to state 8
    variable_assignment            shift and go to state 9
    array_declaration              shift and go to state 10
    array_index_access             shift and go to state 11
    while_statement                shift and go to state 12
    for_statement                  shift and go to state 13
    if_statement                   shift and go to state 14
    print_statement                shift and go to state 15
    return_statement               shift and go to state 16
    empty                          shift and go to state 17
    condition_expression           shift and go to state 18
    datavalue                      shift and go to state 19
    datatype                       shift and go to state 20

state 5

    (1) main_func -> MAIN_FUNCTION EXECUTE COLON statement_list . FUNCTION_END

    FUNCTION_END    shift and go to state 38


state 6

    (2) statement_list -> statement . statement_list
    (3) statement_list -> statement .
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . expression
    (5) statement -> . variable_declaration
    (6) statement -> . variable_assignment
    (7) statement -> . array_declaration
    (8) statement -> . array_index_access
    (9) statement -> . while_statement
    (10) statement -> . for_statement
    (11) statement -> . if_statement
    (12) statement -> . print_statement
    (13) statement -> . return_statement
    (14) statement -> . empty
    (39) expression -> . condition_expression
    (40) expression -> . expression ADDITION expression
    (41) expression -> . expression SUBTRACTION expression
    (42) expression -> . expression MULTIPLICATION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression EXPONENTIAL expression
    (45) expression -> . expression MODULUS expression
    (46) expression -> . datavalue INCREMENT
    (47) expression -> . datavalue DECREMENT
    (48) expression -> . datavalue
    (49) expression -> . array_index_access
    (29) variable_declaration -> . datatype IDENTIFIER SEMICOLON
    (30) variable_declaration -> . datatype IDENTIFIER ASSIGNMENT expression SEMICOLON
    (31) variable_assignment -> . IDENTIFIER ASSIGNMENT expression SEMICOLON
    (32) variable_assignment -> . array_index_access ASSIGNMENT expression SEMICOLON
    (33) array_declaration -> . datatype IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET SEMICOLON
    (34) array_declaration -> . datatype IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET ASSIGNMENT LBRACKET array_value_list RBRACKET SEMICOLON
    (37) array_index_access -> . IDENTIFIER LBRACKET INTEGER_VALUE RBRACKET
    (38) array_index_access -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (27) while_statement -> . WHILE LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_WHILE
    (18) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE ASCEND INTEGER_VALUE EXECUTE COLON statement_list END_FOR
    (19) for_statement -> . FOR variable_declaration WITH LIMIT INTEGER_VALUE DESCEND INTEGER_VALUE EXECUTE COLON statement_list END_FOR
    (15) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_IF
    (16) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list OTHERWISE COLON statement_list END_IF
    (17) if_statement -> . IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list OTHERWISE IF LPAREN condition_expression RPAREN EXECUTE COLON statement_list END_IF
    (20) print_statement -> . PRINT LPAREN print_list RPAREN SEMICOLON
    (28) return_statement -> . RETURN statement SEMICOLON
    (71) empty -> .
    (50) condition_expression -> . condition_expression AND condition_expression
    (51) condition_expression -> . condition_expression OR condition_expression
    (52) condition_expression -> . NOT expression
    (53) condition_expression -> . expression EQ expression
    (54) condition_expression -> . expression LT expression
    (55) condition_expression -> . expression GT expression
    (56) condition_expression -> . expression LE expression
    (57) condition_expression -> . expression GE expression
    (58) condition_expression -> . expression NE expression
    (63) datavalue -> . FLOAT_VALUE
    (64) datavalue -> . INTEGER_VALUE
    (65) datavalue -> . STRING_VALUE
    (66) datavalue -> . NULL_VALUE
    (67) datavalue -> . IDENTIFIER
    (68) datavalue -> . TRUE
    (69) datavalue -> . FALSE
    (70) datavalue -> . array_index_access
    (59) datatype -> . FLOAT
    (60) datatype -> . INTEGER
    (61) datatype -> . STRING
    (62) datatype -> . BOOLEAN

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! reduce/reduce conflict for FUNCTION_END resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for END_WHILE resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for END_IF resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for OTHERWISE resolved using rule 3 (statement_list -> statement .)
  ! reduce/reduce conflict for END_FOR resolved using rule 3 (statement_list -> statement .)
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for FLOAT_VALUE resolved as shift
  ! shift/reduce conflict for INTEGER_VALUE resolved as shift
  ! shift/reduce conflict for STRING_VALUE resolved as shift
  ! shift/reduce conflict for NULL_VALUE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    FUNCTION_END    reduce using rule 3 (statement_list -> statement .)
    END_WHILE       reduce using rule 3 (statement_list -> statement .)
    END_IF          reduce using rule 3 (statement_list -> statement .)
    OTHERWISE       reduce using rule 3 (statement_list -> statement .)
    END_FOR         reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      shift and go to state 21
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 25
    PRINT           shift and go to state 26
    RETURN          shift and go to state 27
    NOT             shift and go to state 28
    FLOAT_VALUE     shift and go to state 29
    INTEGER_VALUE   shift and go to state 22
    STRING_VALUE    shift and go to state 30
    NULL_VALUE      shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    FLOAT           shift and go to state 34
    INTEGER         shift and go to state 35
    STRING          shift and go to state 36
    BOOLEAN         shift and go to state 37

  ! IDENTIFIER      [ reduce using rule 71 (empty -> .) ]
  ! WHILE           [ reduce using rule 71 (empty -> .) ]
  ! FOR             [ reduce using rule 71 (empty -> .) ]
  ! IF              [ reduce using rule 71 (empty -> .) ]
  ! PRINT           [ reduce using rule 71 (empty -> .) ]
  ! RETURN          [ reduce using rule 71 (empty -> .) ]
  ! NOT             [ reduce using rule 71 (empty -> .) ]
  ! FLOAT_VALUE     [ reduce using rule 71 (empty -> .) ]
  ! INTEGER_VALUE   [ reduce using rule 71 (empty -> .) ]
  ! STRING_VALUE    [ reduce using rule 71 (empty -> .) ]
  ! NULL_VALUE      [ reduce using rule 71 (empty -> .) ]
  ! TRUE            [ reduce using rule 71 (empty -> .) ]
  ! FALSE           [ reduce using rule 71 (empty -> .) ]
  ! FLOAT           [ reduce using rule 71 (empty -> .) ]
  ! INTEGER         [ reduce using rule 71 (empty -> .) ]
  ! STRING          [ reduce using rule 71 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 71 (empty -> .) ]
  ! FUNCTION_END    [ reduce using rule 71 (empty -> .) ]
  ! END_WHILE       [ reduce using rule 71 (empty -> .) ]
  ! END_IF          [ reduce using rule 71 (empty -> .) ]
  ! OTHERWISE       [ reduce using rule 71 (empty -> .) ]
  ! END_FOR         [ reduce using rule 71 (empty -> .) ]

    statement                      shift and go to state 6
    statement_list                 shift and go to state 39
    expression                     shift and go to state 7
    variable_declaration           shift and go to state 8
    variable_assignment            shift and go to state 9
    array_declaration              shift and go to state 10
    array_index_access             shift and go to state 11
    while_statement                shift and go to state 12
    for_statement                  shift and go to state 13
    if_statement                   shift and go to state 14
    print_statement                shift and go to state 15
    return_statement               shift and go to state 16
    empty                          shift and go to state 17
    condition_expression           shift and go to state 18
    datavalue                      shift and go to state 19
    datatype                       shift and go to state 20

state 7

    (4) statement -> expression .
    (40) expression -> expression . ADDITION expression
    (41) expression -> expression . SUBTRACTION expression
    (42) expression -> expression . MULTIPLICATION expression
    (43) expression -> expression . DIVISION expression
    (44) expression -> expression . EXPONENTIAL expression
    (45) expression -> expression . MODULUS expression
    (53) condition_expression -> expression . EQ expression
    (54) condition_expression -> expression . LT expression
    (55) condition_expression -> expression . GT expression
    (56) condition_expression -> expression . LE expression
    (57) condition_expression -> expression . GE expression
    (58) condition_expression -> expression . NE expression

    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    RETURN          reduce using rule 4 (statement -> expression .)
    NOT             reduce using rule 4 (statement -> expression .)
    FLOAT_VALUE     reduce using rule 4 (statement -> expression .)
    INTEGER_VALUE   reduce using rule 4 (statement -> expression .)
    STRING_VALUE    reduce using rule 4 (statement -> expression .)
    NULL_VALUE      reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    FLOAT           reduce using rule 4 (statement -> expression .)
    INTEGER         reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    BOOLEAN         reduce using rule 4 (statement -> expression .)
    FUNCTION_END    reduce using rule 4 (statement -> expression .)
    END_WHILE       reduce using rule 4 (statement -> expression .)
    END_IF          reduce using rule 4 (statement -> expression .)
    OTHERWISE       reduce using rule 4 (statement -> expression .)
    END_FOR         reduce using rule 4 (statement -> expression .)
    SEMICOLON       reduce using rule 4 (statement -> expression .)
    ADDITION        shift and go to state 40
    SUBTRACTION     shift and go to state 41
    MULTIPLICATION  shift and go to state 42
    DIVISION        shift and go to state 43
    EXPONENTIAL     shift and go to state 44
    MODULUS         shift and go to state 45
    EQ              shift and go to state 46
    LT              shift and go to state 47
    GT              shift and go to state 48
    LE              shift and go to state 49
    GE              shift and go to state 50
    NE              shift and go to state 51


state 8

    (5) statement -> variable_declaration .

    IDENTIFIER      reduce using rule 5 (statement -> variable_declaration .)
    WHILE           reduce using rule 5 (statement -> variable_declaration .)
    FOR             reduce using rule 5 (statement -> variable_declaration .)
    IF              reduce using rule 5 (statement -> variable_declaration .)
    PRINT           reduce using rule 5 (statement -> variable_declaration .)
